cabal-version: 1.12
name:           forge
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/forge#readme>
homepage:       https://github.com/githubuser/forge#readme
bug-reports:    https://github.com/githubuser/forge/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2019 Author name here
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/githubuser/forge

library
  ghc-options: -Wall
  exposed-modules:
      Forge.Generate
      Forge.Lift
      Forge.Types
      Forge.Internal.Types
  other-modules:
      Paths_forge
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5, containers, text, transformers, mtl, lucid, validation
  default-language: Haskell2010

test-suite forge-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_forge
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , forge
  default-language: Haskell2010
